--- a/index.html
+++ b/index.html
@@ -12,50 +12,119 @@
 <body>
     <!-- MAIN SECTION -->
     <header class="header">
-        <nav class="header__top">
-            <div class="container">
+        <div class="container">
+            <nav class="header__top">
                 <div class="header__top-item">
-                <a class="header__logo" href="#">
-                    <img src="images/logo.png" alt="Image">
-                </a>
-                <ul class="menu">
-                    <li class="menu__list">
-                        <a href="#" class="menu__list-link">About</a>
-                    </li>
-                    <li class="menu__list">
-                        <a href="#" class="menu__list-link">Blog</a>
-                    </li>
-                    <li class="menu__list">
-                        <a href="#" class="menu__list-link">Contact</a>
-                    </li>
-                </ul>
+                    <a class="header__logo" href="#">
+                        <img src="images/logo.png" alt="Image">
+                    </a>
+                    <ul class="menu">
+                        <li class="menu__list">
+                            <a href="#" class="menu__list-link">About</a>
+                        </li>
+                        <li class="menu__list">
+                            <a href="#" class="menu__list-link">Blog</a>
+                        </li>
+                        <li class="menu__list">
+                            <a href="#" class="menu__list-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="header__top-item">
+                    <a href="#" class="header__top-btn">Sign In</a>
+                </div>
+
+            </nav>
+            <div class="header__body">
+                <span>Explore any kind of furnitures</span>
+                <h1 class="header__title">Better Furniture
+                    Better Living</h1>
+                <div class="header__body-btn">
+                    <button>Check our projects</button>
+                    <img src="images/button-arrow.png" alt="Image">
+                </div>
             </div>
-
-            <div class="header__top-item">
-                <a href="#" class="header__top-btn">Sign In</a>
-            </div>
-        </div>
-
-        </nav>
-
-        <div class="header__body">
-            <span>Explore any kind of furnitures</span>
-            <h1 class="header__title">Better Furniture
-                Better Living</h1>
-            <button>Check our projects</button>
         </div>
 
     </header>
     <!-- /MAIN SECTION -->
 
     <!-- SERVICES SECTION -->
-
+    <div class="services">
+        <div class="container">
+            <h2>What we provide</h2>
+            <div class="services__items">
+                <div class="services-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                        <path
+                            d="M6 18L24 4L42 18V40C42 41.0609 41.5786 42.0783 40.8284 42.8284C40.0783 43.5786 39.0609 44 38 44H10C8.93913 44 7.92172 43.5786 7.17157 42.8284C6.42143 42.0783 6 41.0609 6 40V18Z"
+                            stroke="#F26440" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M18 44V24H30V44" stroke="#F26440" stroke-width="3" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                    <h5>10 years of experience<br>
+                        in furniture business</h5>
+                    <p>We’re already established since 2012, and in 10 years we have lots of positive reviews and
+                        achievements</p>
+                    <div class="services-btn">
+                        <a href="#">See more</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                fill="#F26440" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="services-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                        <path
+                            d="M42 8H6C3.79086 8 2 9.79086 2 12V36C2 38.2091 3.79086 40 6 40H42C44.2091 40 46 38.2091 46 36V12C46 9.79086 44.2091 8 42 8Z"
+                            stroke="#F26440" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M2 20H46" stroke="#F26440" stroke-width="3" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                    <h5>Afforable price with<br>
+                        world class quality</h5>
+                    <p>Our craftsmen have lots of experience dealing with crafting furnitures and some of them have
+                        world class quality</p>
+                    <div class="services-btn">
+                        <a href="#">See more</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                fill="#F26440" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="services-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47" viewBox="0 0 47 47" fill="none">
+                        <path
+                            d="M13.7087 43.0832H7.83366C6.79489 43.0832 5.79867 42.6705 5.06416 41.936C4.32964 41.2015 3.91699 40.2053 3.91699 39.1665V25.4582C3.91699 24.4194 4.32964 23.4232 5.06416 22.6887C5.79867 21.9542 6.79489 21.5415 7.83366 21.5415H13.7087M27.417 17.6248V9.7915C27.417 8.23336 26.798 6.73903 25.6962 5.63725C24.5945 4.53548 23.1001 3.9165 21.542 3.9165L13.7087 21.5415V43.0832H35.7987C36.7432 43.0938 37.6598 42.7628 38.3796 42.151C39.0993 41.5392 39.5737 40.6879 39.7153 39.754L42.4178 22.129C42.503 21.5677 42.4652 20.9945 42.3069 20.4492C42.1486 19.904 41.8736 19.3997 41.501 18.9712C41.1285 18.5428 40.6672 18.2005 40.1492 17.968C39.6312 17.7355 39.0689 17.6184 38.5012 17.6248H27.417Z"
+                            stroke="#F26440" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <h5>Bring your ideas into<br>
+                        a living product</h5>
+                    <p>Besides you can buy the existing product, you can also consultate with us also to make your dream
+                        furniture</p>
+                    <div class="services-btn">
+                        <a href="#">See more</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                fill="#F26440" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- /SERVICES SECTION -->
 
     <!-- PRODUCT SECTION -->
     <div class="product">
         <div class="container">
-
+            <h2>Best seller products</h2>
         </div>
     </div>
     <!-- /PRODUCT SECTION -->
