--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                         in furniture business</h5>
                     <p>We’re already established since 2012, and in 10 years we have lots of positive reviews and
                         achievements</p>
-                    <div class="services-btn">
-                        <a href="#">See more</a>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
-                                fill="#F26440" />
-                        </svg>
-                    </div>
+                        <div class="services-btn">
+                            <a href="#">See more</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                    fill="#F26440" />
+                            </svg>
+                        </div>
                 </div>
                 <div class="services-item">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
@@ -88,14 +88,14 @@
                         world class quality</h5>
                     <p>Our craftsmen have lots of experience dealing with crafting furnitures and some of them have
                         world class quality</p>
-                    <div class="services-btn">
-                        <a href="#">See more</a>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
-                                fill="#F26440" />
-                        </svg>
-                    </div>
+                        <div class="services-btn">
+                            <a href="#">See more</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                    fill="#F26440" />
+                            </svg>
+                        </div>
                 </div>
                 <div class="services-item">
                     <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47" viewBox="0 0 47 47" fill="none">
@@ -125,15 +125,94 @@
     <div class="product">
         <div class="container">
             <h2>Best seller products</h2>
+            <div class="product__items">
+                <div class="product__item">
+                    <img src="images/product1.png" alt="Image">
+                    <p>Office chair</p>
+                    <h6>Cream Office Chair</h6>
+                    <span>40 x 50 x 60</span>
+                    $ 50,00
+                </div>
+                <div class="product__item">
+                    <img src="images/product2.png" alt="Image">
+                    <p>Storage</p>
+                    <h6>Celestra Grey Cabinet</h6>
+                    <span>40 x 50 x 60</span>
+                    $ 35,05
+                </div>
+                <div class="product__item">
+                    <img src="images/product3.png" alt="Image">
+                    <p>Decoration</p>
+                    <h6>Fejka Artificial Plant</h6>
+                    <span>40 x 50 x 60</span>
+                    $ 5,00
+                </div>
+                <div class="product__item">
+                    <img src="images/product4.png" alt="Image">
+                    <p>Lightings</p>
+                    <h6>White Standing Lamp</h6>
+                    <span>40 x 50 x 60</span>
+                    $ 23,58
+                </div>
+                <div class="product__item">
+                    <img src="images/product5.png" alt="Image">
+                    <p>Bedside table</p>
+                    <h6>Brown Wood Table</h6>
+                    <span>40 x 50 x 60</span>
+                    $ 23,58
+                </div>
+                <div class="product__item">
+                    <img src="images/product6.png" alt="Image">
+                    <p>Storage</p>
+                    <h6>Morliden Book Rack w/...</h6>
+                    <span>40 x 50 x 60</span>
+                    $ 117,73
+                </div>
+            </div>
         </div>
+           
     </div>
     <!-- /PRODUCT SECTION -->
 
     <!-- PROJECT SECTION -->
-
+    <div class="project">
+        <div class="container">
+            <h2>Our lates projects</h2>
+            <div class="project__slider">
+                <div class="project__slider-item">
+                    <img src="images/project1.png" alt="Image">
+                    <h5>Kitchen</h5>
+                    <p>Architech & Interior Design - 2023</p>
+                </div>
+                <div class="project__slider-item">
+                    <img src="images/project2.png" alt="Image">
+                    <h5>livingroom</h5>
+                    <p>Architech & Interior Design - 2023</p>
+                </div>
+                <div class="project__slider-item">
+                    <img src="images/project3.png" alt="Image">
+                    <h5>bedroom</h5>
+                    <p>Architech & Interior Design - 2023</p>
+                </div>
+                <div class="project__slider-item">
+                    <img src="images/project4.png" alt="Image">
+                    <h5>bathroom</h5>
+                    <p>Architech & Interior Design - 2023</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- /PROJECT SECTION -->
 
     <!--NEW PRODUCT SECTION -->
+    <div class="newproduct" id="newproduct">
+        <div class="container">
+            <span>Newcomer product</span>
+            <h2>2 seater Sofa</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas luctus malesuada et volutpat, pellentesque dignissim suscipit. </p>
+            
+        </div>
+    </div>
     <!-- /NEW PRODUCT SECTION -->
 
     <!-- TESTIMONIALS SECTION -->
