--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                         in furniture business</h5>
                     <p>We’re already established since 2012, and in 10 years we have lots of positive reviews and
                         achievements</p>
-                        <div class="services-btn">
-                            <a href="#">See more</a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
-                                    fill="#F26440" />
-                            </svg>
-                        </div>
+                    <div class="services-btn">
+                        <a href="#">See more</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                fill="#F26440" />
+                        </svg>
+                    </div>
                 </div>
                 <div class="services-item">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
@@ -88,14 +88,14 @@
                         world class quality</h5>
                     <p>Our craftsmen have lots of experience dealing with crafting furnitures and some of them have
                         world class quality</p>
-                        <div class="services-btn">
-                            <a href="#">See more</a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
-                                    fill="#F26440" />
-                            </svg>
-                        </div>
+                    <div class="services-btn">
+                        <a href="#">See more</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M14.0303 5.21967C13.7374 4.92678 13.2626 4.92678 12.9697 5.21967C12.6768 5.51256 12.6768 5.98744 12.9697 6.28033L18.4393 11.75H3.75C3.33579 11.75 3 12.0858 3 12.5C3 12.9142 3.33579 13.25 3.75 13.25H18.4393L12.9697 18.7197C12.6768 19.0126 12.6768 19.4874 12.9697 19.7803C13.2626 20.0732 13.7374 20.0732 14.0303 19.7803L20.7803 13.0303C20.9268 12.8839 21 12.6919 21 12.5C21 12.3983 20.9798 12.3013 20.9431 12.2129C20.9065 12.1245 20.8522 12.0416 20.7803 11.9697L14.0303 5.21967Z"
+                                fill="#F26440" />
+                        </svg>
+                    </div>
                 </div>
                 <div class="services-item">
                     <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47" viewBox="0 0 47 47" fill="none">
@@ -170,7 +170,7 @@
                 </div>
             </div>
         </div>
-           
+
     </div>
     <!-- /PRODUCT SECTION -->
 
@@ -209,25 +209,86 @@
         <div class="container">
             <span>Newcomer product</span>
             <h2>2 seater Sofa</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas luctus malesuada et volutpat, pellentesque dignissim suscipit. </p>
-            
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas luctus malesuada et volutpat,
+                pellentesque dignissim suscipit. </p>
+            <h6>Avaliable Colors</h6>
+            <div class="circles">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <circle cx="12" cy="12" r="12" fill="#355655" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <circle cx="12" cy="12" r="12" fill="#F26947" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <circle cx="12" cy="12" r="12" fill="#CA8152" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <circle cx="12" cy="12" r="12" fill="#EBC5AD" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <circle cx="12" cy="12" r="12" fill="#292928" />
+                </svg>
+            </div>
+            <a href="#" class="newproduct__btn">
+                <button>Shop Now</button>
+                <img src="images/button-arrow.png" alt="Image">
+            </a>
         </div>
     </div>
     <!-- /NEW PRODUCT SECTION -->
 
     <!-- TESTIMONIALS SECTION -->
+    <div class="testimonial">
+        <div class="container">
+            <h2>What our clients say</h2>
+            <div class="testimonial__items">
+                <div class="testimonial-item">
+                    <img src="images/client1.png" alt="Image">
+                    <div class="description">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                            <path
+                                d="M10.2128 0L7.31915 16.2297H11.4043V32H0V16.2297L4.25532 0H10.2128ZM30.8085 0L27.9149 16.2297H32V32H20.5957V16.2297L24.8511 0H30.8085Z"
+                                fill="#F26440" />
+                        </svg>
+                        <h5>As expected, 10 years experience on furniture business will not disappointing at all</h5>
+                        <p>As they said, their 10 years of experience in furniture and interior business is real. They work it professionally and friendly at the same time and of course the results is beyond my expectations.</p>
+                        <span>Roy Rakabuming</span>
+                    </div>
+                </div>
+                <div class="testimonial-item">
+                    <img src="images/client2.png" alt="Image">
+                    <div class="description">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                            <path
+                                d="M10.2128 0L7.31915 16.2297H11.4043V32H0V16.2297L4.25532 0H10.2128ZM30.8085 0L27.9149 16.2297H32V32H20.5957V16.2297L24.8511 0H30.8085Z"
+                                fill="#F26440" />
+                        </svg>
+                        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vel odio tortor amet sagittis sed. </h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Molestie est, dictum pellentesque turpis. Facilisis id cras amet tortor. Porttitor nascetur eget sit eget massa consectetur. Fringilla viverra sit magna.</p>
+                        <span>Dafit Bekam</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- /TESTIMONIALS SECTION -->
 
     <!-- CONTACT SECTION -->
+    <div class="contact">
+        <div class="container">
+            <div class="contact__item"></div>
+            <div class="contact__item">
+                <img src="" alt="Image">
+                <img src="" alt="Image">
+                <img src="" alt="Image">
+            </div>
+        </div>
+    </div>
     <!-- /CONTACT SECTION -->
 
     <!-- FOOTER SECTION -->
     <!-- /FOOTER SECTION -->
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
