--- a/index.html
+++ b/index.html
@@ -276,17 +276,34 @@
     <!-- CONTACT SECTION -->
     <div class="contact">
         <div class="container">
-            <div class="contact__item"></div>
-            <div class="contact__item">
-                <img src="" alt="Image">
-                <img src="" alt="Image">
-                <img src="" alt="Image">
+            <div class="contact__item-first">
+                <h2>We pay details in 
+                    every our work</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit et nisl tristique nulla. Nisl, egestas molestie vestibulum lectus habitasse donec morbi. At est parturient id eu ut. </p>
+                <div class="contact__links">
+                    <a class="contact-btn" href="#">Contact Us</a>
+                    <a class="contact-link" href="#">View Projects</a>
+                </div>
+            </div>
+            <div class="contact__item-second">
+                <img src="images/contact3.png" alt="Image">
+                <img src="images/contact2.png" alt="Image">
+                <img src="images/contact1.png" alt="Image">
             </div>
         </div>
     </div>
     <!-- /CONTACT SECTION -->
 
     <!-- FOOTER SECTION -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__items">
+                <div class="footer__item"></div>
+                <div class="footer__item"></div>
+            </div>
+
+        </div>
+    </footer>
     <!-- /FOOTER SECTION -->
 
 </body>
