--- a/index.html
+++ b/index.html
@@ -234,13 +234,31 @@
                 <img src="images/button-arrow.png" alt="Image">
             </a>
         </div>
-    </div>
     <!-- /NEW PRODUCT SECTION -->
 
     <!-- TESTIMONIALS SECTION -->
     <div class="testimonial" id="testimonial">
         <div class="container">
             <h2>What our clients say</h2>
+            <div class="slider__btn">
+                <button class="prev-arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                        <g opacity="0.4">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M13.2928 25.7071C13.6834 26.0976 14.3165 26.0976 14.707 25.7071C15.0976 25.3166 15.0976 24.6834 14.707 24.2929L7.41415 17H26.9999C27.5522 17 27.9999 16.5523 27.9999 16C27.9999 15.4477 27.5522 15 26.9999 15L7.41415 15L14.707 7.70711C15.0976 7.31658 15.0976 6.68342 14.707 6.29289C14.3165 5.90237 13.6834 5.90237 13.2928 6.29289L4.29283 15.2929C4.10977 15.476 4.01252 15.7123 4.00108 15.952C4.00032 15.968 3.99994 15.984 3.99994 16M3.99998 16.0092C4.0023 16.2621 4.09992 16.5142 4.29283 16.7071L13.2928 25.7071"
+                                fill="#0F3141" />
+                        </g>
+                    </svg>
+                </button>
+                <button class="next-arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M18.7071 6.29289C18.3166 5.90237 17.6834 5.90237 17.2929 6.29289C16.9024 6.68342 16.9024 7.31658 17.2929 7.70711L24.5858 15H5C4.44772 15 4 15.4477 4 16C4 16.5523 4.44772 17 5 17H24.5858L17.2929 24.2929C16.9024 24.6834 16.9024 25.3166 17.2929 25.7071C17.6834 26.0976 18.3166 26.0976 18.7071 25.7071L27.7071 16.7071C27.8902 16.524 27.9874 16.2877 27.9989 16.048C27.9996 16.032 28 16.016 28 16M28 15.9908C27.9976 15.7379 27.9 15.4858 27.7071 15.2929L18.7071 6.29289"
+                            fill="#286F6C" />
+                    </svg>
+                </button>
+            </div>
+
             <div class="testimonial__items">
                 <div class="testimonial-item">
                     <img src="images/client1.png" alt="Image">
@@ -409,7 +427,8 @@
                             </g>
                             <defs>
                                 <clipPath id="clip0_1_320">
-                                    <rect width="17.25" height="16.4841" fill="white" transform="translate(0.75 0.25)" />
+                                    <rect width="17.25" height="16.4841" fill="white"
+                                        transform="translate(0.75 0.25)" />
                                 </clipPath>
                             </defs>
                         </svg>
@@ -421,7 +440,7 @@
                                 fill="white" />
                         </svg>
                     </a>
-                    
+
                 </div>
             </div>
 
