--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                 <img src="images/button-arrow.png" alt="Image">
             </a>
         </div>
+    </div>
     <!-- /NEW PRODUCT SECTION -->
 
     <!-- TESTIMONIALS SECTION -->
