--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </svg>
             </div>
             <a href="#" class="newproduct__btn">
-                <button>Shop Now</button>
+                <span>Shop Now</span>
                 <img src="images/button-arrow.png" alt="Image">
             </a>
         </div>
