--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <path d="M2 20H46" stroke="#F26440" stroke-width="3" stroke-linecap="round"
                             stroke-linejoin="round" />
                     </svg>
-                    <h5>Afforable price with<br>
+                    <h5>Affordable price with<br>
                         world class quality</h5>
                     <p>Our craftsmen have lots of experience dealing with crafting furnitures and some of them have
                         world class quality</p>
@@ -105,7 +105,7 @@
                     </svg>
                     <h5>Bring your ideas into<br>
                         a living product</h5>
-                    <p>Besides you can buy the existing product, you can also consultate with us also to make your dream
+                    <p>Besides you can buy the existing product, you can also consult with us also to make your dream
                         furniture</p>
                     <div class="services-btn">
                         <a href="#">See more</a>
@@ -177,27 +177,27 @@
     <!-- PROJECT SECTION -->
     <div class="project">
         <div class="container">
-            <h2>Our lates projects</h2>
+            <h2>Our latest projects</h2>
             <div class="project__slider">
                 <div class="project__slider-item">
                     <img src="images/project1.png" alt="Image">
                     <h5>Kitchen</h5>
-                    <p>Architech & Interior Design - 2023</p>
+                    <p>Architect & Interior Design - 2023</p>
                 </div>
                 <div class="project__slider-item">
                     <img src="images/project2.png" alt="Image">
                     <h5>livingroom</h5>
-                    <p>Architech & Interior Design - 2023</p>
+                    <p>Architect & Interior Design - 2023</p>
                 </div>
                 <div class="project__slider-item">
                     <img src="images/project3.png" alt="Image">
                     <h5>bedroom</h5>
-                    <p>Architech & Interior Design - 2023</p>
+                    <p>Architect & Interior Design - 2023</p>
                 </div>
                 <div class="project__slider-item">
                     <img src="images/project4.png" alt="Image">
                     <h5>bathroom</h5>
-                    <p>Architech & Interior Design - 2023</p>
+                    <p>Architect & Interior Design - 2023</p>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
             <h2>2 seater Sofa</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas luctus malesuada et volutpat,
                 pellentesque dignissim suscipit. </p>
-            <h6>Avaliable Colors</h6>
+            <h6>Available Colors</h6>
             <div class="circles">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <circle cx="12" cy="12" r="12" fill="#355655" />
@@ -395,7 +395,7 @@
                 <div class="footer__item footer__bottom-center">
                     <a href="#">Privacy and Terms</a>
                     <a href="#">Legal Notice</a>
-                    <a href="#">Languanges</a>
+                    <a href="#">Languages</a>
                 </div>
                 <div class="footer__item social">
                     <a href="#">
