--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
             </nav>
             <div class="header__body">
-                <span>Explore any kind of furnitures</span>
+                <span class="header__body-text">Explore any kind of furnitures</span>
                 <h1 class="header__title">Better Furniture
                     Better Living</h1>
-                <div class="header__body-btn">
-                    <button>Check our projects</button>
+                <a href="#" class="header__body-btn">
+                    <span>Check our projects</span>
                     <img src="images/button-arrow.png" alt="Image">
-                </div>
+                </a>
             </div>
         </div>
 
